add more features to dropin

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dayjs": "^1.11.3",
     "firebase-admin": "^11.0.0",
+    "just-group-by": "^2.0.1",
     "just-remove": "^3.0.1",
     "just-shuffle": "^4.0.1",
     "just-split-at": "^3.0.1",
